--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
 org.gradle.caching=true
+org.gradle.configuration-cache=true
+org.gradle.configureondemand=true
+org.gradle.jvmargs=-Xmx4g
+org.gradle.kotlin.dsl.skipMetadataVersionCheck=false
 org.gradle.parallel=true
-org.gradle.vfs.watch=true
-kotlin.code.style=official
