--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,10 @@
-kotlin.code.style=official
+org.gradle.caching=true
+org.gradle.configuration-cache=true
+org.gradle.configureondemand=true
+org.gradle.kotlin.dsl.skipMetadataVersionCheck=false
+org.gradle.parallel=true
+# Explicitly enable filesystem watching so Gradle doesn't go through its
+# default of trying to evaluate whether it can be enabled automatically, which
+# can be slow on Windows machines with mapped network drives:
+# https://github.com/gradle/gradle/issues/17955.
+org.gradle.vfs.watch=true
